--- a/templates/employees.html
+++ b/templates/employees.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<script src="{{ url_for('static', filename='js/employees.js') }}"></script>
+<script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 
 <div class="container-fluid py-4">
 
@@ -169,3 +169,4 @@
 
 </div>
 {% endblock %}
+
