--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
- <link rel="stylesheet" href="{{ url_for('static', filename='css/employee_vivid_theme.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <script src="{{ url_for('static', filename='js/employee_add.js') }}"></script>
 
 <div class="container-fluid py-4">
@@ -125,4 +125,5 @@
   });
 </script>
 {% endblock %}
+
 
