--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="inventory-header">
-    <h2>📦 Inventory</h2>
+    <h2>📦 Inventory Management </h2>
     <!-- This link is now correct -->
     <a href="{{ url_for('add_product_form') }}" class="add-btn">+ Add Product</a>
 </div>
@@ -73,4 +73,5 @@
 </div>
 
 {% endblock %}
+
 
