--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -8,7 +8,7 @@
 <!-- REMOVE THIS LINE from base.html -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/inventory.css') }}">
 -->
-<script src="{{ url_for('static', filename='js/inventory.js') }}"></script>
+<script src="{{ url_for('static', filename='js/inventory_add_edit.js') }}"></script>
 
 <div class="container-fluid py-4">
 
@@ -150,3 +150,4 @@
 
 </div>
 {% endblock %}
+
