--- a/static/css/purchase.css
+++ b/static/css/purchase.css
@@ -1,4 +1,14 @@
 /*  Common ERP Styles – Reusable in all modules */
+.btn-outline-danger {
+    border-color: #dc3545;
+    color: #dc3545;
+    transition: 0.2s;
+}
+
+.btn-outline-danger:hover {
+    background-color: #dc3545;
+    color: white;
+}
 
 /* General Layout */
 body {
@@ -63,4 +73,5 @@ h3, h4, h5 {
   font-size: 1.3rem;
   font-weight: bold;
   color: #0d6efd;
+
 }
