--- a/templates/edit_employee.html
+++ b/templates/edit_employee.html
@@ -11,7 +11,7 @@
     </a>
   </div>
 
-  <form method="POST" enctype="multipart/form-data" id="employeeForm"> }}>
+  <form method="POST" enctype="multipart/form-data" id="employeeForm">
     <!-- Hidden ID for JS validation -->
     <input type="hidden" id="employeeId" value="{{ employee.id }}">
 
@@ -142,3 +142,4 @@
   });
 </script>
 {% endblock %}
+
