--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- Full Background Hero -->
 <section class="erp-hero position-relative">
-  <div class="hero-bg" style="background-image: url('{{ url_for('static', filename='uploads/real_logo.jpg') }}');"></div>
+  <div class="hero-bg" style="background-image: url('{{ url_for('static', filename='uploads/real_newlogo.png') }}');"></div>
   <div class="hero-overlay text-center text-white">
     <h1 class="display-4 fw-bold" data-aos="fade-down">REAL PROMOTION </h1>
     <p class="lead" data-aos="fade-up" data-aos-delay="100">
@@ -61,5 +61,6 @@
   </div>
 </section>
 {% endblock %}
+
 
 
